--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,10 +21,20 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular-in-memory-web-api": "^0.3.1",
+    "body-parser": "^1.17.1",
+    "connect-livereload": "^0.6.0",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "ejs": "^2.5.6",
+    "errorhandler": "^1.5.0",
+    "express": "^4.15.2",
     "font-awesome": "^4.7.0",
-    "primeng": "^4.0.0-rc.4",
+    "method-override": "^2.3.8",
+    "morgan": "^1.8.1",
+    "primeng": "^4.0.0-rc.5",
     "rxjs": "^5.1.0",
+    "serve-favicon": "^2.4.2",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -38,9 +48,9 @@
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
