--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build",
+    "start": "concurrently \"npm run build\" \"npm run serve\"",
+    "build": "ng build --dev -w",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "serve": "nodemon server/app.js"
   },
   "private": true,
   "dependencies": {
@@ -21,28 +22,29 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "angular-in-memory-web-api": "^0.3.1",
-    "body-parser": "^1.17.1",
-    "connect-livereload": "^0.6.0",
-    "cookie-parser": "^1.4.3",
-    "core-js": "^2.4.1",
-    "ejs": "^2.5.6",
-    "errorhandler": "^1.5.0",
-    "express": "^4.15.2",
+    "bootstrap": "^4.0.0-alpha.6",
+    "classlist.js": "^1.1.20150312",
     "font-awesome": "^4.7.0",
-    "method-override": "^2.3.8",
-    "morgan": "^1.8.1",
-    "primeng": "^4.0.0-rc.5",
+    "jquery": "^3.2.1",
+    "primeng": "^4.0.0",
     "rxjs": "^5.1.0",
-    "serve-favicon": "^2.4.2",
-    "zone.js": "^0.8.4"
+    "tether": "^1.4.0",
+    "web-animations-js": "^2.2.5"
   },
   "devDependencies": {
     "@angular/cli": "1.0.1",
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
+    "body-parser": "^1.17.1",
     "codelyzer": "~2.0.0",
+    "concurrently": "^3.4.0",
+    "connect-livereload": "^0.6.0",
+    "cookie-parser": "^1.4.3",
+    "core-js": "^2.4.1",
+    "ejs": "^2.5.6",
+    "errorhandler": "^1.5.0",
+    "express": "^4.15.2",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
@@ -51,9 +53,14 @@
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "method-override": "^2.3.8",
+    "morgan": "^1.8.1",
+    "nodemon": "^1.11.0",
     "protractor": "~5.1.0",
+    "serve-favicon": "^2.4.2",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "typescript": "~2.2.0",
+    "zone.js": "^0.8.9"
   }
 }
