--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "serve": "nodemon server/app.js"
+    "serve": "nodemon server/app.js",
+    "sasslint": "sass-lint -c .sass-lint.yml -q -v"
   },
   "private": true,
   "dependencies": {
@@ -22,12 +23,15 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/marked": "^0.0.28",
     "bootstrap": "^4.0.0-alpha.6",
     "classlist.js": "^1.1.20150312",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "marked": "^0.3.6",
     "primeng": "^4.0.0",
     "rxjs": "^5.1.0",
+    "sass-lint": "^1.10.2",
     "tether": "^1.4.0",
     "web-animations-js": "^2.2.5"
   },
@@ -60,7 +64,7 @@
     "serve-favicon": "^2.4.2",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0",
+    "typescript": "^2.3.2",
     "zone.js": "^0.8.9"
   }
 }
