--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,7 +4,27 @@
     "outDir": "../out-tsc/app",
     "module": "es2015",
     "baseUrl": "",
-    "types": []
+    "types": [],
+    // 到達しえないコードがあるとエラー
+    "allowUnreachableCode": false,
+    // 到達しえないラベルがあるとエラー
+    "allowUnusedLabels": false,
+    // use strict; が自動でつく(module ならば勝手につくけど)
+    "alwaysStrict": true,
+    // 暗黙的な any があるとエラー
+    "noImplicitAny": true,
+    // 返り値はしっかり書く
+    "noImplicitReturns": true,
+    // this に型を明示しないとエラー
+    "noImplicitThis": true,
+    // 使っていないローカル変数があるとエラー
+    "noUnusedLocals": false,
+    // 使っていない引数があるとエラー
+    "noUnusedParameters": false,
+    // デフォルトで non-nullableになるので null チェック必須に
+    "strictNullChecks": true,
+    // エラーが可愛くなる
+    "pretty": true
   },
   "exclude": [
     "test.ts",
